<resources>
    <string name="app_name">Project</string>
    <string name="create_new_account">Create new account</string>
    <string name="sing_in">Sing In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="let_s_talk">Let\'s talk</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create new account</string>
    <string name="add_a_new_image">Add a new Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Sing_Up">Sing up</string>
</resources>